--- a/springboot_catchall/src/main/resources/application.properties
+++ b/springboot_catchall/src/main/resources/application.properties
@@ -8,4 +8,6 @@ spring.mvc.view.suffix=.jsp
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 server.tomcat.max-swallow-size=100MB
-pics_folder=C:\\Users\\chsurya\\Desktop\\Tmp\\Spring\\springboot_catchall\\src\\main\\resources\\static
+pics_folder=C:\\Users\\chsurya\\git\\springboot-catchall\\springboot_catchall\\src\\main\\resources\\static
+spring.data.mongodb.uri=mongodb+srv://chet:Shooter75@cluster0.ory75.mongodb.net/tennis
+spring.data.mongodb.database=tennis
