--- a/springboot_catchall/pom.xml
+++ b/springboot_catchall/pom.xml
@@ -28,13 +28,27 @@
 		    <scope>provided</scope>
 		</dependency>
 	
-		
+		<!--
 		<dependency>
 		    <groupId>javax.servlet</groupId>
 		    <artifactId>jstl</artifactId>
 		    <version>1.2</version>
 	     	<scope>provided</scope>
 		</dependency>
+		-->
+		
+		<dependency>
+		  <groupId>jakarta.servlet.jsp.jstl</groupId>
+		  <artifactId>jakarta.servlet.jsp.jstl-api</artifactId>
+		</dependency>
+		<dependency>
+		  <groupId>org.glassfish.web</groupId>
+		  <artifactId>jakarta.servlet.jsp.jstl</artifactId>
+		</dependency>
+		
+		
+	
+		
 	
 	<!--	
 		<dependency>
@@ -43,6 +57,11 @@
 		    <scope>provided</scope>
 		</dependency>
 		-->
+		
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-mongodb</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
